# bmstu-4-term-oop

exam/: prep.md
exam/patterns/src/: AbstractFactory.cpp  Adapter.cpp  Builder.cpp  Decorator.cpp  FactoryMethod.cpp  Mediator.cpp  Momento.cpp  Prototype.cpp  Visitor.cpp  makefile
lab_01/: CMakeLists.txt
lab_01/modelViewer/: connection.h  connections.cpp  connections.h  drawer.cpp  drawer.h  edge.cpp  edge.h  edgeDisplayer.cpp  edgeDisplayer.h  editorDock.cpp  editorDock.h  errors.cpp  errors.h  figure.cpp  figure.h  figure_1.txt  init.h  main.cpp  mainwindow.cpp  mainwindow.h  modelViewer.pro  point2d.cpp  point2d.h  point3d.cpp  point3d.h  points.cpp  points.h  readme.md  renderArea.cpp  renderArea.h  startup.cpp  startup.h  taskHandler.cpp  taskHandler.h  transformationDock.cpp  transformationDock.h  ui.cpp  ui.h
lab_02/myVector/: .gitignore  CMakeLists.txt
lab_02/myVector/inc/: basecontainer.h  baseiterator.h  constiterator.h  iterator.h  myiterator.hpp  myvector.h  myvector.hpp  myvectorexceptions.h
lab_02/myVector/src/: baseiterator.hpp  constiterator.hpp  iterator.hpp  myiterator.cpp  myvector.cpp  myvector.hpp
lab_02/myVector/tests/: testmain.cpp
lab_03/src/commands/: basecommand.cpp  basecommand.h
lab_03/src/facade/: facade.cpp  facade.h
lab_03/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
